# xoreos - A reimplementation of BioWare's Aurora engine
#
# xoreos is the legal property of its developers, whose names
# can be found in the AUTHORS file distributed with this source
# distribution.
#
# xoreos is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 3
# of the License, or (at your option) any later version.
#
# xoreos is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with xoreos. If not, see <http://www.gnu.org/licenses/>.

# Aurora-specific graphics-related loaders.

include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libdetour.la

noinst_HEADERS = \
                 DebugDraw.h \
                 DetourDebugDraw.h \
                 DetourTileCache.h \
                 DetourTileCacheBuilder.h \
                 DetourAlloc.h \
                 DetourAssert.h \
                 DetourCommon.h \
                 DetourMath.h \
                 DetourNavMesh.h \
                 DetourNavMeshBuilder.h \
                 DetourNavMeshQuery.h \
                 DetourNode.h \
                 DetourStatus.h \
                 $(EMPTY)

libdetour_la_SOURCES = \
                       DebugDraw.cpp \
                       DetourDebugDraw.cpp \
                       DetourTileCache.cpp \
                       DetourTileCacheBuilder.cpp \
                       DetourAlloc.cpp \
                       DetourCommon.cpp \
                       DetourNavMesh.cpp \
                       DetourNavMeshBuilder.cpp \
                       DetourNavMeshQuery.cpp \
                       DetourNode.cpp \
                       $(EMPTY)

